<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_status"
        android:textSize="@dimen/_12ssp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/editUserStatus"
        android:layout_width="match_parent"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:endIconMode="clear_text"
        android:layout_below="@+id/statusText"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/status">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/editUserStatus">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/_12ssp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/primary" />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/_12ssp"
            android:layout_toStartOf="@+id/save"
            android:textColor="@color/primary" />

    </RelativeLayout>

</RelativeLayout>