<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.SplashScreen">

    <TextView
        android:layout_width="293dp"
        android:layout_height="288dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <ImageView
        android:id="@+id/wave_hand"
        android:layout_width="350dp"
        android:layout_height="362dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/splashscreenimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:letterSpacing="0.1"
        android:text="@string/let_s_have"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wave_hand" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/akaya_telivigala"
        android:letterSpacing="0.1"
        android:text="@string/chat_together"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/mobile_messaging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/quattrocento_sans"
        android:text="@string/mobile_messaging_is_rapidly_becoming"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/the_primary_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/quattrocento_sans"
        android:text="@string/the_primary_way_users_engage_socially"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/mobile_messaging"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/quattrocento_sans"
        android:text="@string/on_mobile"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/the_primary_way"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>