<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.VerifyOTP">


    <ImageView
        android:id="@+id/verifynoimg"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:src="@drawable/verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/enterotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:fontFamily="@font/quattrocento_sans"
        android:layout_below="@+id/verifynoimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/wesent"
        android:layout_width="350dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/we_have_sent_you_an_otp_for_verification_of_phone_number"
        android:lineHeight="@dimen/_20sdp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/quattrocento_sans"
        android:textStyle="bold"
        android:layout_below="@+id/enterotp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        tools:targetApi="p" />


    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wesent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:cursorVisible="true"
        android:inputType="numberDecimal"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/colorAccent"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:itemSpacing="8dp"
        app:itemWidth="48dp"
        app:lineColor="@color/colorAccent"
        app:lineWidth="2dp"
        app:viewType="rectangle"
        tools:ignore="SpeakableTextPresentCheck" />

    <android.widget.Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_background"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:text="@string/verify_otp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/_10ssp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/quattrocento_sans"/>

    <ProgressBar
        android:id="@+id/progressBarOfVerifyOTP"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:theme="@style/progressBarColor"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@color/colorAccent"
        android:layout_below="@+id/firstPinView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_10sdp"
        android:padding="10dp"/>



</RelativeLayout>