<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SetProfile">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_210sdp"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/bgBlurImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/setimage"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorAccent"
            android:layout_height="@dimen/_100sdp"/>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOfSetProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:layout_marginTop="@dimen/_170sdp"
        android:layout_marginHorizontal="@dimen/_15sdp">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/username"
            app:hintTextColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/primary"
            app:hintAnimationEnabled="true"
            android:layout_marginHorizontal="30dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="@dimen/_80sdp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            android:hint="@string/hey_i_am_using_spoutchat">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <android.widget.Button
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_below="@+id/cardViewOfSetProfile"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/primary"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp" />

    <ProgressBar
        android:id="@+id/progressBarOfSetProfile"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:theme="@style/progressBarColor2"
        android:background="@drawable/circle_shape"
        android:layout_below="@+id/coordinatorLayout"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_50sdp"
        android:elevation="@dimen/_20sdp"
        android:padding="10dp"/>

</RelativeLayout>