<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userModel"
            type="com.example.spoutchat.UserModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".fragments.ProfileFragment">

        <!-- TODO: Update blank fragment layout -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/showImage"
                android:layout_height="@dimen/_230sdp">

                <ImageView
                    android:id="@+id/showUserImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    imageChat="@{userModel.image}"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/usernameProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/_160sdp"
                    android:text="@{userModel.name , default = Username}"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:textColor="@color/white"
                    android:layout_marginStart="20dp"
                    android:textSize="@dimen/_8ssp"
                    android:layout_below="@+id/usernameProfile" />


            </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showImage"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/primaryVariant"
            android:contentDescription="@string/todo"
            android:src="@drawable/round_add_a_photo_24"
            app:borderWidth="0dp"
            app:elevation="10dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Circle"
            app:tint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <androidx.cardview.widget.CardView
            android:id="@+id/nameCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_95sdp"
            android:layout_below="@+id/showImage"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rippleffect"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rippleffect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    app:tint="@color/icon_color"
                    android:src="@drawable/round_person_24"
                    android:contentDescription="@string/todo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/name"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/viewUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{userModel.name , default = Username}"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:lineHeight="@dimen/_20sdp"
                        android:text="@string/this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_chatfast_contacts"
                        android:textColor="@color/secondary_text"
                        tools:ignore="TextContrastCheck"
                        tools:targetApi="p" />

                </LinearLayout>

            </LinearLayout>



        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/nameCardViewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/nameCardView"
            android:layout_marginStart="@dimen/_55sdp"
            android:alpha="0.08"
            android:layout_marginTop="5dp"
            android:background="@color/secondary_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/phoneCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_below="@+id/nameCardViewLine"
            android:background="@drawable/rippleffect"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/rippleffect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/round_call_24"
                    app:tint = "@color/icon_color"
                    android:contentDescription="@string/todo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/phone"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="TextContrastCheck" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/viewUserCountryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{userModel.countryCode , default = 91}"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13ssp"/>

                        <TextView
                            android:id="@+id/viewUserNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{userModel.number , default = 0000000000}"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13ssp"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/phoneCardViewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/phoneCardView"
            android:layout_marginStart="@dimen/_55sdp"
            android:alpha="0.08"
            android:layout_marginTop="5dp"
            android:background="@color/secondary_text" />


        <androidx.cardview.widget.CardView
            android:id="@+id/aboutCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_below="@+id/phoneCardViewLine"
            android:background="@drawable/rippleffect"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/rippleffect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/round_info_24"
                    app:tint = "@color/icon_color"
                    android:contentDescription="@string/todo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_20sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/about"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/viewAbout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{userModel.status , default = status}"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</layout>